<resources>
    <string name="app_name">Tempero Capixaba</string>

    <string name="action_contato">Sobre</string>
    <string name="cardapio_diario_title">Cardápio do dia</string>
    <string name="cardapio_diario_format">Cardápio do dia - %s</string>
    <string name="cardapio_button">Fazer o pedido</string>
    <string name="quantidade">Quantidade</string>
    <string name="quantidade_pequena">Menor</string>
    <string name="quantidade_grande">Maior</string>
    <string name="resumo_pedido">Resumo do Pedido</string>
    <string name="confirmar_pedido_button">Confirmar Pedido</string>

    <string name="sobre">Uma empresa que trabalha para atender com qualidade, seriedade e com um estilo de temperos do Espírito Santo que
        foram desenvolvidos com muitos anos de carinho e dedicação para dar o melhor sabor a sua refeição.</string>

    <string name="telefones">Telefones:</string>
    <string name="sobre_title">Sobre nós</string>

    <string name="nome_text_view">Seu nome</string>
    <string name="endereco_text_view">Seu endereço</string>
    <string name="empresa_text_view">Sua empresa (opcional)</string>
    <string name="entrega_radio_button">Entregar no endereço</string>
    <string name="buscar_radio_button">Buscar no local</string>
    <string name="telefone_text_view">Seu telefone</string>
    <string name="finalizar_pedido_title">Finalize o seu pedido</string>
    <string name="finalizar_pedido_button">Finalizar Pedido</string>
    <string name="email_text_view">Seu email (opcional)</string>
    <string name="title_activity_meus_pedidos">Meus Pedidos</string>
    <string name="meus_pedidos_text_view">Meus Pedidos</string>
    <string name="nao_tem_pedidos_text_view">Você não possui nenhum pedido.</string>
    <string name="pedido_detalhes_subtitle">Detalhes do Pedido</string>
    <string name="voltar_button">Voltar</string>
    <string name="telefones_numeros">(21) 98804-8545 / (21) 3071-0403</string>
    <string name="endereco">Endereço:</string>
    <string name="endereco_valor">Largo da Carioca, ao lado do metrô na saída do Ed. Central</string>
    <string name="endereco_loja">Endereço da Loja:</string>
    <string name="endereco_loja_valor">Rua 20 de Abril, 37 - Loja 2</string>
    <string name="nome_prato_text_view">Nome do prato</string>
    <string name="tamanho_text_view">Tamanho</string>
    <string name="home_image_button">Home</string>
    <string name="phone_image_button">Telefone</string>
    <string name="marker_image_button">Mapa</string>
    <string name="minus">-</string>
    <string name="max">+</string>
    <string name="zero">0</string>
    <string name="tamanho_pequeno_text_view">Menor</string>
    <string name="tamanho_grande_text_view">Maior</string>
    <string name="n_pedido_text_view">Nº do Pedido</string>
    <string name="total_text_view">Total</string>

    <color name="second_action_bar">#626262</color>
</resources>
