<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/second_action_bar">

        <TextView
            android:id="@+id/finalize_pedido_title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finalizar_pedido_title"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/sobre_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_about"
            android:contentDescription="@string/sobre"
            android:background="@null" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nome_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_margin="5dp"
                android:hint="@string/nome_text_view" />


            <EditText
                android:id="@+id/endereco_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_margin="5dp"
                android:hint="@string/endereco_text_view" />

            <EditText
                android:id="@+id/telefone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_margin="5dp"
                android:hint="@string/telefone_text_view" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_margin="5dp"
                android:hint="@string/email_text_view" />

            <EditText
                android:id="@+id/empresa_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_margin="5dp"
                android:hint="@string/empresa_text_view" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id="@+id/tipo_entrega_radio_group">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/entrega_radio_button" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/buscar_radio_button" />

            </RadioGroup>

            <Button
                android:id="@+id/finalizar_pedido_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finalizar_pedido_button"
                style="@style/RedButton"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="15dp"/>

            <fragment
                android:name="com.creativityloop.android.temperocapixaba.fragment.BottomMenuFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bottom_menu_fragment"
                tools:layout="@layout/fragment_bottom_menu" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>