<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:padding="10dp"
    android:background="@color/vermelhoRodape">

    <ImageButton
        android:id="@+id/home_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home"
        android:contentDescription="@string/home_image_button"
        android:background="@null"
        android:layout_weight="1"/>

    <ImageButton
        android:id="@+id/phone_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_phone"
        android:contentDescription="@string/phone_image_button"
        android:background="@null"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/marker_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_marker"
        android:contentDescription="@string/marker_image_button"
        android:background="@null"
        android:layout_weight="1"/>
</LinearLayout>