<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/second_action_bar">

        <TextView
            android:id="@+id/resumo_pedido_title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resumo_pedido"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/back_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_back"
            android:contentDescription="@string/sobre"
            android:background="@null" />
    </LinearLayout>

        <ListView
            android:id="@+id/resumo_pedido_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="4dp" />

        <Button
            android:id="@+id/confirmar_pedido_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_pedido_button"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:textColor="#ffffff"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="15dp"/>


</LinearLayout>