<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
    <TextView
        android:id="@+id/prato_name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="Nome do Pratos"
        android:layout_weight="10"
        android:layout_gravity="center_vertical" />

    <Button
        android:id="@+id/minus_pequena_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/minus"/>

    <TextView
        android:id="@+id/prato_quantidade_pequena_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="20sp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:text="@string/zero" />

    <Button
        android:id="@+id/max_pequena_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/max"/>

    <Button
        android:id="@+id/minus_grande_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/minus"/>

    <TextView
        android:id="@+id/prato_quantidade_grande_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="20sp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:text="@string/zero" />

    <Button
        android:id="@+id/max_grande_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/max"/>

</LinearLayout>